<?xml version="1.0" encoding="utf-8"?>

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal"
        android:padding="10sp">


        <EditText
            android:id="@+id/new_player_fname"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"
            android:inputType="text"
            android:maxLines="1"
            android:hint="@string/fname"/>

    <EditText
        android:id="@+id/new_player_lname"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/new_player_fname"
        android:inputType="text"
        android:maxLines="1"
        android:hint="@string/lname"/>

        <EditText
            android:id="@+id/new_player_heightfeet"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/new_player_lname"
            android:layout_marginTop="30dp"
            android:inputType="numberDecimal"
            android:maxLines="1"

            android:hint="@string/player_heightfeet"/>

    <LinearLayout
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/new_player_heightfeet"
        android:layout_below="@+id/new_player_lname"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="30dp"
        >
    <EditText
        android:id="@+id/new_player_heightinches"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:maxLines="1"
        android:layout_toRightOf="@id/new_player_heightfeet"
        android:hint="@string/player_heightinches"/>
    </LinearLayout>

    <EditText
        android:id="@+id/new_player_weight"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/new_player_heightfeet"
        android:layout_marginTop="30dp"
        android:inputType="numberDecimal"
        android:maxLines="1"
        android:hint="@string/player_weight"/>

    <LinearLayout
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/new_player_weight"
        android:layout_below="@+id/new_player_heightfeet"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="30dp"
        >



        <EditText
            android:id="@+id/new_player_age"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/new_player_weight"
            android:inputType="number"
            android:maxLines="1"
            android:hint="@string/player_age"/>

    </LinearLayout>


    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/new_player_weight"
        android:entries="@array/gender_array"/>


    <Spinner
        android:id="@+id/spinner"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/spinner2"
        android:layout_marginTop="30dp"
        android:entries="@array/sport_array"/>

        <Button
            android:id="@+id/new_submit"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/spinner2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="120dp"
            android:background="@drawable/submit"
            android:text="@string/submit_program"
            />




</RelativeLayout>


